# dverk

./: CMakeLists.txt  README.md  dverk-config.cmake.in
demo/: CMakeLists.txt  main.cc
demo/eigen/: CMakeLists.txt  main.cc
include/dverk/: dverk.h
src/: dverk.f
